--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -11,6 +11,7 @@
 "Login": "Bejelentkezés",
 "backHome": "Vissza a kezdő lapra",
 "accessViolation":"Nem vagy jogosult erre a müveletre",
+"notFound":"Nincs ilyen",
 "Remember me": "Bejelentkezve maradok",
 "Not accounts? - register": "Nincs még fiokód? - Regisztrálj!",
 "Forgot your password?": "Elfelejtetted a jelszavad?",
